--- a/ansible-createuser.yml
+++ b/ansible-createuser.yml
@@ -26,7 +26,7 @@
      lineinfile:
         dest=/etc/ssh/sshd_config
         regexp='^PasswordAuthentication'
-        line="PasswordAuthentication no"
+        line="PasswordAuthentication yes"
         state=present
         backup=yes
      notify:
