--- a/ansible-createuser.yml
+++ b/ansible-createuser.yml
@@ -11,6 +11,11 @@
       comment: "Ansible Management Account"
       expires: -1
       password: "{{ 'DevOps@2020' | password_hash('sha512','A512') }}"
+  - name: Change ownership
+    file:
+      path: /home/ansible
+      owner: ansible
+      group: ansible  
   - name: Deploy Local User SSH Key
     authorized_key:
       user: ansible
